<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/recipes_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.RecipesFragment">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/recipes_search_view_height"
        style="@style/Widget.AppCompat.SearchView.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/tabsView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/recipes_material_card_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView"
            app:layout_constraintBottom_toTopOf="@+id/recipes_recycler_view"
            app:cardBackgroundColor="#7a87a4"
            app:cardCornerRadius="@dimen/recipes_material_card_corner_radius">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="@dimen/recipes_tab_layout_height">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/all" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/favorites" />
            </com.google.android.material.tabs.TabLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipes_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabsView" />

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Failed to fetch recipes. Pull to refresh"
        tools:visibility="visible"
        tools:textSize="20sp"
        android:visibility="gone"
        android:textSize="@dimen/recipes_fetch_error_text_size"
        android:text="@string/failed_to_fetch_recipes_pull_to_refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleInverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:src="@drawable/add"
            android:visibility="gone"
            app:elevation="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_anchor="@id/recipes_recycler_view"
            app:layout_anchorGravity="bottom|end"
            tools:ignore="ContentDescription"
            tools:visibility="visible"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>