<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/recipe_item_padding"
    android:id="@+id/recipe_item_layout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/recipe_item_height"
    android:orientation="horizontal"
    tools:ignore="UseCompoundDrawables">
    <ImageView
        android:id="@+id/recipe_image_thumbnail"
        android:layout_width="@dimen/recipe_item_image_width"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/recipe_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_weight="2"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="2"
        android:textSize="@dimen/recipe_item_name_size"
        android:textStyle="bold"
        tools:text="Pizza"
        tools:textSize="30sp"
        tools:textStyle="bold" />
</LinearLayout>