...
    <string name="all">All</string>
    <string name="favorites">Favorites</string>
    <string name="failed_to_fetch_recipes_pull_to_refresh">Failed to fetch recipes. Pull to refresh</string>
    <string name="server_error">Could not connect to the server</string>
    <string name="favorite_recipe_add_error">Could not add recipe to favorites</string>
    <string name="favorite_recipe_remove_error">Could not remove recipe from favorites</string>
    <string name="no_recipe">No recipe found</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="add_new_recipe">Add New Recipe</string>
    <string name="recipe_title">Recipe Title...</string>
    <string name="recipe_photo">Recipe Photo:</string>
    <string name="ingredients_">Ingredients:</string>
...
